# ai-timeline-notebook

./: .gitignore  AGENTS.md  LICENSE  README.md  ai_timeline_notebook.ipynb  myst.yml  pyproject.toml
notebooks/: 1957-perceptron.ipynb  1965-fuzzy-logic.ipynb  1972-prolog.ipynb  1975-genetic-algorithms.ipynb  1986-backpropagation.ipynb  fuzzy_logic_plot.py
