[project]
name = "ai-timeline-notebook"
version = "0.1.0"
description = "Jupyter notebook for the history of AI."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "MIT"
dependencies = [
    "ipykernel>=6.29.5,<7.0.0",
    "jupyterlab>=4.4.0,<5.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
