[project]
name = "ai-timeline-notebook"
version = "0.1.0"
description = "Jupyter notebook for the history of AI."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
dependencies = [
    "ipykernel>=7.2.0,<8.0.0",
    "jupyter-book>=2.1.5,<3.0.0",
    "jupyterlab>=4.5.8,<5.0.0",
    "pyswip>=0.3.3,<0.4.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
